--- a/requirements.txt
+++ b/requirements.txt
@@ -1,186 +1,4 @@
-absl-py==2.1.0
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.2.0
-appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.14.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blis==0.7.11
-catalogue==2.0.10
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
-colorama==0.4.4
-colorlog==4.7.2
-comm==0.2.1
-confection==0.1.4
-contourpy==1.2.0
-cycler==0.12.1
-cymem==2.0.8
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-docker-pycreds==0.4.0
-easydict==1.11
-en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
-exceptiongroup==1.2.0
-executing==2.0.1
-fastjsonschema==2.19.1
-filelock==3.13.1
-fonttools==4.47.2
-fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2023.12.2
-gitdb==4.0.11
-GitPython==3.1.41
-grpcio==1.60.1
-idna==3.6
-ipykernel==6.29.0
-ipython==8.20.0
-ipywidgets==8.1.1
-isoduration==20.11.0
-jedi==0.19.1
-jellyfish==1.0.3
-Jinja2==3.1.3
-joblib==1.3.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.21.0
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.2
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyter_server==2.12.5
-jupyter_server_terminals==0.5.1
-jupyterlab==4.0.10
-jupyterlab-widgets==3.0.9
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-kiwisolver==1.4.5
-langcodes==3.3.0
-Markdown==3.5.2
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mistune==3.0.2
-mpmath==1.3.0
-msgpack==1.0.7
-murmurhash==1.0.10
-nbclient==0.9.0
-nbconvert==7.14.2
-nbformat==5.9.2
-nest-asyncio==1.5.9
-networkx==3.2.1
-nltk==3.8.1
-notebook==7.0.6
-notebook_shim==0.2.3
-numpy==1.26.3
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.3.101
-nvidia-nvtx-cu12==12.1.105
-overrides==7.4.0
-packaging==23.2
-pandas==2.1.4
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.9.0
-pillow==10.2.0
-platformdirs==4.1.0
-plotly==5.18.0
-preshed==3.0.9
-prometheus-client==0.19.0
-prompt-toolkit==3.0.43
-protobuf==4.25.2
-psutil==5.9.7
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-pydantic==2.5.3
-pydantic_core==2.14.6
-Pygments==2.17.2
-pyparsing==3.1.1
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2023.3.post1
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.5.1
-QtPy==2.4.1
-ray==2.6.3
--e git+https://github.com/RUCAIBox/RecBole.git@4121d5c2a7c4813566d2240e5d474d6ce2f0929f#egg=recbole
-referencing==0.32.1
-regex==2023.12.25
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.17.1
-scikit-learn==1.3.2
-scipy==1.11.4
-Send2Trash==1.8.2
-sentry-sdk==1.39.2
-setproctitle==1.3.3
-six==1.16.0
-skillNer==1.0.3
-smart-open==6.4.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-spacy==3.7.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-stack-data==0.6.3
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.16.0
-tensorboard-data-server==0.7.2
-terminado==0.18.0
-texttable==1.7.0
-tf_keras-nightly==2.16.0.dev2024021310
-thinc==8.2.2
-thop==0.1.1.post2209072238
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-tomli==2.0.1
-torch==2.1.2
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.1
-triton==2.1.0
-typer==0.9.0
-types-python-dateutil==2.8.19.20240106
-typing_extensions==4.9.0
-tzdata==2023.4
-uri-template==1.3.0
-urllib3==2.1.0
-wandb==0.16.2
-wasabi==1.1.2
-wcwidth==0.2.13
-weasel==0.3.4
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-Werkzeug==3.0.1
-widgetsnbextension==4.0.9
+recbole==1.2.0
+pyarrow==15.0.0
+wandb==0.16.3
+easydict==1.12
